implement home handler
- update dependencies