@@ -2,13 +2,18 @@
   :description "FIXME: write description"
   :url "http://example.com/FIXME"
   :min-lein-version "2.0.0"
-  :dependencies [[org.clojure/clojure "1.9.0"]
+  :jvm-opts ["--add-modules" "java.xml.bind"]
+  :dependencies [[bidi "2.1.3"]
                  [duct/core "0.6.2"]
-                 [duct/module.logging "0.3.1"]
-                 [duct/module.web "0.6.4"]
+                 [duct/module.ataraxy "0.2.0"]
                  [duct/module.cljs "0.3.2"]
+                 [duct/module.logging "0.3.1"]
                  [duct/module.sql "0.4.2"]
-                 [org.postgresql/postgresql "42.1.4"]]
+                 [duct/module.web "0.6.4"]
+                 [org.clojure/clojure "1.9.0"]
+                 [org.clojure/clojurescript "1.10.238"]
+                 [org.postgresql/postgresql "42.2.2"]
+                 [ring/ring-core "1.6.3"]]
   :plugins [[duct/lein-duct "0.10.6"]]
   :main ^:skip-aot phoneq.main
   :uberjar-name  "phoneq-standalone.jar"
@@ -23,6 +28,6 @@
    :profiles/dev {}
    :project/dev  {:source-paths   ["dev/src"]
                   :resource-paths ["dev/resources"]
-                  :dependencies   [[integrant/repl "0.2.0"]
-                                   [eftest "0.4.1"]
+                  :dependencies   [[eftest "0.5.0"]
+                                   [integrant/repl "0.3.1"]
                                    [kerodon "0.9.0"]]}})
